# StandardDeviation.rs

./: Cargo.toml
src/: lib.rs  main.rs
standard_deviation/: Cargo.toml  README.md
standard_deviation/src/: lib.rs  main.rs
