[package]
name = "standard_deviation"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple tool used to get the standard deviation from the cli."
homepage = "https://www.github.com/ElCodigoDominicano"
repository = "https://github.com/ElCodigoDominicano/StandardDeviation.rs"
readme = "README.md"
keywords = ["statistics", "standard", "deviation"]
catagories = ["command-line-utilities"]
authors = ["ElCodigoDominicano"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
